# regedit-tui

./: BUILD.md  CMakeLists.txt  README.md  USAGE.md  todo.md
include/: registry_manager.h  ui_manager.h  windows_registry_manager.h
research/: powershell_integration.md  registry_api.md  tui_libraries.md
src/: main.cpp  registry_manager.cpp  ui_manager.cpp  windows_registry_manager.cpp
